src/styles.css
@import url('https://fonts.googleapis.com/css2?family=Anton&family=Inter:wght@400;500;600;700&display=swap');
@import 'tailwindcss';
@plugin "@tailwindcss/typography";

:root {
  /* Theme colors */
  --background: oklch(0.28 0.0559 282.1);
  --background-hover: oklch(0.36 0.0777 289.59);
  --foreground: oklch(0.98 0.0017 247.84);
  --primary: oklch(0.99 0.0017 247.84);
  --primary-foreground: oklch(0.3 0.05 264);
  --secondary: oklch(0.3 0.0629 281.93);
  --secondary-foreground: oklch(0.9 0.0125 247.97);
  --muted: oklch(0.44 0.0986 289.35);
  --muted-hover: oklch(0.47 0.1 289);
  --muted-foreground: oklch(0.85 0.0167 261.49);
  --accent: oklch(0.36 0.0777 289.59);

  --subtext: oklch(0.7 0 0);
  --link-hover: hsla(311, 71%, 63%, 90%);
  --glow: 0 0 10px rgba(243, 103, 175, 0.5), 0 0 4px rgba(243, 103, 175, 0.3);
  --gradient-text: linear-gradient(to right, #f8923e, #f367af);
}

@theme {
  /* Theme colors */
  --color-background: var(--background);
  --color-background-hover: var(--background-hover);
  --color-foreground: var(--foreground);
  --color-primary: var(--primary);
  --color-secondary: var(--secondary);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-muted: var(--muted);
  --color-muted-hover: var(--muted-hover);
  --color-muted-foreground: var(--muted-foreground);
  --color-accent: var(--accent);

  --breakpoint-xs: 30rem;
}

@layer base {
  html,
  body {
    background-color: var(--background);
    color: var(--foreground);
    overflow-y: auto;
    overflow-x: hidden;
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    font-family: 'Anton', system-ui, sans-serif;
    letter-spacing: 0.02em;
  }

  /* Hide scrollbars */
  html,
  body {
    -ms-overflow-style: none; /* IE and Edge */
    scrollbar-width: none; /* Firefox */
  }

  /* Chrome, Safari, newer Edge */
  html::-webkit-scrollbar,
  body::-webkit-scrollbar {
    display: none;
  }

  code[class*='language-'],
  pre[class*='language-'] {
    font-family: 'Fira Mono', 'Jetbrains Mono', 'Consolas', monospace !important;
  }
}

@layer utilities {
  .font-anton {
    font-family: 'Anton', system-ui, sans-serif;
    letter-spacing: 0.02em;
  }

  .shadow-glow {
    box-shadow: var(--glow);
  }

  .icon {
    color: var(--icon);
  }

  .subtext {
    color: var(--subtext);
  }

  .gradient-text {
    background: var(--gradient-text);
    background-size: 400% 400%;
    -webkit-background-clip: text;
    background-clip: text;
    color: transparent;
    text-fill-color: transparent;
    -webkit-text-fill-color: transparent;
  }
}

/* Animation keyframes */
.animate-gradient {
  animation: gradient 12s ease infinite;
}

@keyframes gradient {
  0% {
    background-position: 0% 50%;
  }
  50% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 0% 50%;
  }
}

.spin {
  animation: spin 12s linear infinite;
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

